# nicks-stack

./: .gitignore  LICENSE  README.md  build_template.py  nicks-stack.orgo.yaml
files/: NicksStackSetup.desktop  Obsidian.desktop  SOUL.md  agentphone-bridge-run.sh  config.yaml  gateway-run.sh  hermes.env  obsidian-launch  obsidian-registry.json  onboard-launch.sh  onboard.sh  op-enable.py  seed-sms-cron.py  telegram-pair.py
files/agentphone-bridge/: agentphone_bridge.py  env  test_event_ordering.py
files/local-packages/latitude-telemetry-hermes/: README.md  pyproject.toml
files/local-packages/latitude-telemetry-hermes/latitude_telemetry_hermes/: __init__.py  builder.py  config.py  hooks.py  messages.py  model.py  otlp.py  transport.py  util.py
files/local-packages/latitude-telemetry-hermes/tests/: test_reasoning_attributes.py
files/plugins/observability/latitude/: __init__.py  plugin.yaml
files/plugins/orgo-desktop-local/: __init__.py  plugin.yaml  tools.py
files/scripts/latitude/: install_local_telemetry_patch.sh
files/scripts/orgo_desktop/: __init__.py  cli.py  client.py  smoke_test.py
files/skills/agent-card/: SKILL.md
files/skills/agent-card/agentcard-hermes-setup/: SKILL.md
files/skills/agent-card/references/: wallet-funding-troubleshooting.md
files/skills/agent-communications-apis/: SKILL.md
files/skills/agent-communications-apis/references/: agentmail-notes.md  agentphone-setup-notes.md
files/skills/autonomous-ai-agents/agent-context-management/: SKILL.md
files/skills/hermes-latitude-observability/: SKILL.md
files/vault/: Welcome.md
(+103 files in other folders)
